sample/error/e01106-4.asn
E01106-4 DEFINITIONS ::=
BEGIN
	/*
		/*
		*/
	*/
	Extra Comment End.
	*/
	ExtraCommentEnd ::= NULL

	/*
	Extra Comment Begin.
	/*
		/*
		*/
	*/
	ExtraCommentBegin ::= NULL
END
